--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "NODE_ENV=development parcel index.html ",
+    "watch": "NODE_ENV=development parcel -p 8080 index.html",
     "build": "NODE_ENV=production parcel build index.html  --no-minify --public-url ./ "
   },
   "author": "",
