--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "NODE_ENV=development parcel -p 8080 index.html",
-    "build": "NODE_ENV=production parcel build index.html  --no-minify --public-url ./ "
+    "build": "NODE_ENV=production parcel build index.html  --no-minify --public-url /YGLRX"
   },
   "author": "",
   "license": "ISC",
